--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
   <!-- fontawesome link  -->
   <script src="https://kit.fontawesome.com/f47311485a.js" crossorigin="anonymous"></script>
-	<title>React App</title>
+	<title>MINI IPOD</title>
 </head>
 
 <body>
